Fixed navbar link in two rows on smaller screens. Fixed Calendar months to english.

--- a/style.scss
+++ b/style.scss
@@ -105,8 +105,8 @@ a {
 }
 
 .index-img {
-  width: 100%;
-  padding: 0 1rem;
+  width: 80%;
+  // padding: 0 2rem;
   align-self: center;
 }
 
@@ -117,7 +117,7 @@ a {
   text-shadow: 2px 2px 3px black;
   color: white;
   font-size: 2.6rem;
-  margin-bottom: 0;
+  // margin-top: 2rem;
 }
 
 #about {
@@ -481,6 +481,11 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
+  }
+}
+@media screen and (min-width: 575px) and (max-width: 614px) {
+  .nav-link-style {
+    font-size: 0.9rem;
   }
 }
 @media screen and (min-width: 768px) {
